[project]
name = "vlo-backend"
version = "0.2.0"
description = "VLO video editor backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic",
    "xxhash",
    "Pillow",
    "httpx",
    "websockets",
    "python-dotenv",
    "numpy",
    "av",
    "torch",
    "torchaudio",
    "einops",
    "soxr",
    "soundfile",
    "rotary-embedding-torch",
    "beat-this",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
